# chatUp

./: .gitignore  ChatUp.db  Makefile  README.md  classes.hpp  client.cpp  database.cpp  main.cpp  mydatabase.db  server.cpp  server.hpp  time_server.c
includes/lib/: libsodium.23.dylib  libsodium.la
lib/cryptopp870/: a.out
libsodium-1.0.18/: Makefile  config.status  libsodium.pc  libtool
libsodium-1.0.18/builds/: Makefile
libsodium-1.0.18/contrib/: Makefile
libsodium-1.0.18/dist-build/: Makefile
libsodium-1.0.18/msvc-scripts/: Makefile
libsodium-1.0.18/src/: Makefile
libsodium-1.0.18/src/libsodium/: Makefile  libsodium.la
libsodium-1.0.18/src/libsodium/crypto_auth/.deps/: libsodium_la-crypto_auth.Plo
libsodium-1.0.18/src/libsodium/crypto_box/.deps/: libsodium_la-crypto_box.Plo  libsodium_la-crypto_box_easy.Plo  libsodium_la-crypto_box_seal.Plo
libsodium-1.0.18/src/libsodium/crypto_generichash/.deps/: libsodium_la-crypto_generichash.Plo
libsodium-1.0.18/src/libsodium/crypto_hash/.deps/: libsodium_la-crypto_hash.Plo
libsodium-1.0.18/src/libsodium/crypto_kdf/.deps/: libsodium_la-crypto_kdf.Plo
libsodium-1.0.18/src/libsodium/crypto_kx/.deps/: libsodium_la-crypto_kx.Plo
libsodium-1.0.18/src/libsodium/crypto_onetimeauth/.deps/: libsodium_la-crypto_onetimeauth.Plo
libsodium-1.0.18/src/libsodium/crypto_pwhash/.deps/: libsodium_la-crypto_pwhash.Plo
libsodium-1.0.18/src/libsodium/include/: Makefile
path/lib/: libsodium.23.dylib  libsodium.la
path/lib/pkgconfig/: libsodium.pc
rs/: Cargo.toml
rs/src/: main.rs
(+94 files in other folders)
