[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3.1"}
tokio = {version = "1.28.2", features = ["full"]}
config = "0.13.1"
dotenv = "0.15.0"
serde = {version = "1.0.163", features = ["derive"]}
reqwest = {version = "0.11.18", features = ["json"]}
